--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
-# For how it is generated, see `hack/generate-authors.sh`.
+# For how it is generated, see `hack/generate-authors.sh`
 
-Lordwill1 <messagelordwill@gmail.com>
-ejilistic <vitalisibeh85@gmail.com>
+zakaria el majdoubi <zakaria.elmajdoubi@uit.ac.ma>
